--- a/src/stylesheets/basics.scss
+++ b/src/stylesheets/basics.scss
@@ -8,7 +8,7 @@ body {
 }
 
 body {
-  font-family: 'PT Root UI', Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 400;
 }
 
