--- a/src/stylesheets/article.scss
+++ b/src/stylesheets/article.scss
@@ -1,4 +1,5 @@
-body.page {
+// Стили для страниц (много) подборок и мини-статей
+body.article {
   display: flex;
   flex-direction: column;
   justify-content: center;
