--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,17 @@
 @import 'stylesheets/vars.scss';
 @import 'stylesheets/fonts.scss';
 @import 'stylesheets/basics.scss';
+
+@import 'stylesheets/header.scss';
+@import 'stylesheets/footer.scss';
+
 @import 'stylesheets/index.scss';
+@import 'stylesheets/about.scss';
+
+@import 'stylesheets/articles.scss';
+@import 'stylesheets/article.scss';
+
+@import 'stylesheets/crafts.scss';
+@import 'stylesheets/craft.scss';
+
+@import 'stylesheets/map.scss';
