--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,4 +1,5 @@
 body.index {
+  background: #fffcef;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -7,5 +8,56 @@ body.index {
   & > div,
   & > a {
     margin: 10px 0;
+  }
+
+  h1 {
+    font-family: 'PP Pangram Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 97px;
+  }
+
+  a {
+    margin-top: 30px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+  }
+
+  h2 {
+    margin-top: 60px;
+    font-family: 'PP Pangram Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 26px;
+  }
+
+  p {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+  }
+
+  .sn_icons {
+    img {
+      opacity: 0.5;
+      height: 50%;
+      width: auto;
+      margin-left: 20px;
+    }
+  }
+
+  #my-form {
+    margin-top: 10px;
+  }
+
+  #my-form-button,
+  input {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
   }
 }
