--- a/src/stylesheets/fonts.scss
+++ b/src/stylesheets/fonts.scss
@@ -3,7 +3,7 @@
 // PP Pangram Sans Semibold
 @font-face {
   font-family: 'PP Pangram Sans';
-  src: url('fonts/PPPangramSans-Semibold.otf') format('otf');
+  src: url('fonts/PPPangramSans-Semibold.otf') format('opentype');
   font-weight: 600;
   font-style: normal;
 }
