--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,57 +1,143 @@
 body.index {
-  background: #fffcef;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  background: var(--black);
+  color: var(--white);
 
-  & > div,
-  & > a {
-    margin: 10px 0;
+  a {
+    text-decoration: none;
+    color: var(--white);
   }
 
-  h1 {
-    font-family: 'PP Pangram Sans';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 97px;
-  }
+  .header {
+    display: flex;
+    flex-direction: row;
+    padding: 3.988vw 13.869vw 0;
+    a.about {
+      position: relative;
+      margin-top: 0.595vw;
+      margin-right: auto;
+      font-size: 1.31vw;
+    }
 
-  h2 {
-    margin-top: 60px;
-    font-family: 'PP Pangram Sans';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 26px;
-  }
+    .vk,
+    .tg,
+    .dzen {
+      height: 2.976vw;
+      width: 2.976vw;
+      background-size: contain;
+    }
 
-  p {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-  }
+    .vk {
+      background-image: url('images/icon_vk.png');
+    }
 
-  .sn_icons {
-    img {
-      opacity: 0.5;
-      height: 50%;
-      width: auto;
-      margin-left: 20px;
+    .tg {
+      margin-left: 0.952vw;
+      background-image: url('images/icon_tg.png');
+    }
+
+    .dzen {
+      margin-left: 0.952vw;
+      background-image: url('images/icon_dzen.png');
     }
   }
 
-  #my-form {
-    margin-top: 10px;
-    margin-bottom: 40px;
-    // margin: 10px 0 40px 0;
+  .content {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    h1 {
+      margin-top: 9.94vw;
+      font-family: 'PP Pangram Sans';
+      font-style: normal;
+      font-weight: 600;
+      font-size: 8.274vw;
+    }
+
+    h2 {
+      margin-top: 6.905vw;
+      font-family: 'PP Pangram Sans';
+      font-style: normal;
+      font-weight: 600;
+      font-size: 2.619vw;
+    }
+
+    p {
+      font-family: 'Montserrat';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 1.369vw;
+    }
+
+    #my-form {
+      margin-top: 2.56vw;
+      margin-bottom: 40px;
+      // margin: 10px 0 40px 0;
+    }
+
+    #my-form-button,
+    input {
+      font-family: 'Montserrat';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 1.548vw;
+    }
+
+    input {
+      width: 30.06vw;
+      height: 3.452vw;
+      padding-left: 1.667vw;
+      background: var(--white);
+      border: 2px solid var(--white);
+      border-radius: 1.786vw;
+    }
+
+    #my-form-button {
+      margin-left: 2.024vw;
+      width: 13.988vw;
+      height: 3.452vw;
+      // padding-left: 1.667vw;
+      background: var(--black);
+      border: 2px solid var(--white);
+      border-radius: 1.786vw;
+      color: var(--white);
+    }
   }
 
-  #my-form-button,
-  input {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
+  .footer {
+    display: flex;
+    flex-direction: row;
+    margin-top: 7.5vw;
+    height: 13.571vw;
+    background-color: var(--white);
+    padding: 2.917vw 13.869vw 2.143vw;
+
+    .nav {
+      width: max-content;
+      margin-right: auto;
+      h3 {
+        color: var(--black);
+        font-family: 'PP Pangram Sans';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 1.369vw;
+        margin-bottom: 0.893vw;
+      }
+      a {
+        color: var(--black);
+        display: block;
+        font-size: 1.19vw;
+        line-height: 2.024vw;
+      }
+    }
+    h4 {
+      margin-top: 6.786vw;
+      color: var(--black);
+      font-family: 'PP Pangram Sans';
+      font-style: normal;
+      font-weight: 600;
+      font-size: 1.19vw;
+    }
   }
 }
