--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -27,17 +27,17 @@ body.index {
     }
 
     .vk {
-      background-image: url('images/icon_vk.png');
+      background-image: url('images/w_icon_vk.png');
     }
 
     .tg {
       margin-left: 0.952vw;
-      background-image: url('images/icon_tg.png');
+      background-image: url('images/w_icon_tg.png');
     }
 
     .dzen {
       margin-left: 0.952vw;
-      background-image: url('images/icon_dzen.png');
+      background-image: url('images/w_icon_dzen.png');
     }
   }
 
