--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,12 +1,11 @@
 body.index {
-  background: var(--black);
-  color: var(--white);
+  background: var(--white);
+  color: var(--black);
 
   a {
     text-decoration: none;
-    color: var(--white);
+    color: var(--black);
   }
-
   .header {
     display: flex;
     flex-direction: row;
@@ -27,17 +26,17 @@ body.index {
     }
 
     .vk {
-      background-image: url('images/w_icon_vk.png');
+      background-image: url('images/b_icon_vk.png');
     }
 
     .tg {
       margin-left: 0.952vw;
-      background-image: url('images/w_icon_tg.png');
+      background-image: url('images/b_icon_tg.png');
     }
 
     .dzen {
       margin-left: 0.952vw;
-      background-image: url('images/w_icon_dzen.png');
+      background-image: url('images/b_icon_dzen.png');
     }
   }
 
@@ -87,8 +86,8 @@ body.index {
       width: 30.06vw;
       height: 3.452vw;
       padding-left: 1.667vw;
-      background: var(--white);
-      border: 2px solid var(--white);
+      // background: var(--black);
+      border: 2px solid var(--black);
       border-radius: 1.786vw;
     }
 
@@ -96,10 +95,10 @@ body.index {
       margin-left: 2.024vw;
       width: 13.988vw;
       height: 3.452vw;
-      background: var(--black);
-      border: 2px solid var(--white);
+      background: var(--white);
+      border: 2px solid var(--black);
       border-radius: 1.786vw;
-      color: var(--white);
+      color: var(--black);
     }
   }
 
@@ -139,4 +138,155 @@ body.index {
       color: var(--black);
     }
   }
+}
+// @media (max-width: 2560px) {
+//   .index {
+//     max-width: 1511px;
+//   }
+// }
+// @media (max-width: 1512px) {
+//   .index {
+//     max-width: 1439px;
+//   }
+// }
+@media screen and (min-device-width: 1700px) and (max-device-width: 1924px) {
+  .vk,
+  .tg,
+  .dzen {
+    width: 247.37px;
+  }
+  p {
+    font-size: 28px;
+  }
+  h2 {
+    margin-top: 628px;
+    font-size: 55px;
+  }
+  #my-form {
+    margin-top: 50px;
+    margin-bottom: 40px;
+  }
+  .nav {
+    h3 {
+      margin-bottom: 0.895vw;
+      font-size: 27px;
+    }
+    a {
+      font-size: 24px;
+    }
+  }
+  h4 {
+    font-size: 24px;
+  }
+}
+
+@media screen and (min-device-width: 700px) and (max-device-width: 950px) and (min-device-width: 1600px) {
+  .about {
+    left: 10px;
+  }
+  .vk,
+  .tg,
+  .dzen {
+    width: 247.37px;
+  }
+  h1 {
+    width: 900px;
+  }
+  p {
+    font-size: 28px;
+  }
+  h2 {
+    margin-top: 628px;
+    font-size: 55px;
+  }
+  #my-form {
+    margin-top: 50px;
+    margin-bottom: 40px;
+  }
+  .nav {
+    h3 {
+      margin-bottom: 0.895vw;
+      font-size: 27px;
+    }
+    a {
+      font-size: 24px;
+    }
+  }
+  h4 {
+    font-size: 24px;
+  }
+}
+// @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+//   a.about {
+//     font-size: 22px;
+//   }
+//   .vk,
+//   .tg,
+//   .dzen {
+//     width: 247.37px;
+//   }
+//   h1 {
+//     width: 600px;
+//   }
+//   p {
+//     font-size: 28px;
+//   }
+//   h2 {
+//     margin-top: 628px;
+//     font-size: 55px;
+//   }
+//   #my-form {
+//     margin-top: 50px;
+//     margin-bottom: 40px;
+//   }
+//   .nav {
+//     h3 {
+//       margin-bottom: 0.895vw;
+//       font-size: 27px;
+//     }
+//     a {
+//       font-size: 24px;
+//     }
+//   }
+//   h4 {
+//     font-size: 24px;
+//   }
+// }
+@media only screen and (min-device-width: 834px) and (max-device-width: 1112px) and (orientation: portrait) {
+  a.about {
+    font-size: 2vw;
+  }
+  .vk,
+  .tg,
+  .dzen {
+    width: 200px;
+  }
+  h1 {
+    width: 560px;
+    margin-top: 230px;
+  }
+  p {
+    font-size: 40px;
+    width: 400px;
+    text-align: center;
+  }
+  h2 {
+    font-size: 120px;
+  }
+  //   #my-form {
+  //     margin-top: 50px;
+  //     margin-bottom: 40px;
+  //   }
+  //   .nav {
+  //     h3 {
+  //       margin-bottom: 0.895vw;
+  //       font-size: 27px;
+  //     }
+  //     a {
+  //       font-size: 24px;
+  //     }
+  //   }
+  //   h4 {
+  //     font-size: 24px;
+  //   }
 }
