--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -140,3 +140,171 @@ body.index {
     }
   }
 }
+
+// @media (max-width: 2560px) {
+//   .index {
+//     max-width: 1511px;
+//   }
+// }
+// @media (max-width: 1512px) {
+//   .index {
+//     max-width: 1439px;
+//   }
+// }
+@media screen and (min-width: 1700px) and (max-width: 1924px) {
+  body.index {
+    background: red;
+
+    .header {
+      .vk,
+      .tg,
+      .dzen {
+        width: 247.37px;
+      }
+    }
+  }
+
+  p {
+    font-size: 28px;
+  }
+  h2 {
+    margin-top: 628px;
+    font-size: 55px;
+  }
+  #my-form {
+    margin-top: 50px;
+    margin-bottom: 40px;
+  }
+  .nav {
+    h3 {
+      margin-bottom: 0.895vw;
+      font-size: 27px;
+    }
+    a {
+      font-size: 24px;
+    }
+  }
+  h4 {
+    font-size: 24px;
+  }
+}
+
+@media screen and (min-width: 700px) and (max-width: 950px) and (min-width: 1600px) {
+  .about {
+    left: 10px;
+  }
+  .vk,
+  .tg,
+  .dzen {
+    width: 247.37px;
+  }
+  h1 {
+    width: 900px;
+  }
+  p {
+    font-size: 28px;
+  }
+  h2 {
+    margin-top: 628px;
+    font-size: 55px;
+  }
+  #my-form {
+    margin-top: 50px;
+    margin-bottom: 40px;
+  }
+  .nav {
+    h3 {
+      margin-bottom: 0.895vw;
+      font-size: 27px;
+    }
+    a {
+      font-size: 24px;
+    }
+  }
+  h4 {
+    font-size: 24px;
+  }
+}
+// @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+//   a.about {
+//     font-size: 22px;
+//   }
+//   .vk,
+//   .tg,
+//   .dzen {
+//     width: 247.37px;
+//   }
+//   h1 {
+//     width: 600px;
+//   }
+//   p {
+//     font-size: 28px;
+//   }
+//   h2 {
+//     margin-top: 628px;
+//     font-size: 55px;
+//   }
+//   #my-form {
+//     margin-top: 50px;
+//     margin-bottom: 40px;
+//   }
+//   .nav {
+//     h3 {
+//       margin-bottom: 0.895vw;
+//       font-size: 27px;
+//     }
+//     a {
+//       font-size: 24px;
+//     }
+//   }
+//   h4 {
+//     font-size: 24px;
+//   }
+// }
+
+@media only screen and (min-width: 768px) and (max-width: 1112px) and (orientation: portrait) {
+  body.index {
+    background: green;
+
+    .header {
+      a.about {
+        font-size: 2vw;
+        color: blue;
+      }
+      .vk,
+      .tg,
+      .dzen {
+        width: 200px;
+      }
+    }
+  }
+
+  h1 {
+    width: 560px;
+    margin-top: 230px;
+  }
+  p {
+    font-size: 40px;
+    width: 400px;
+    text-align: center;
+  }
+  h2 {
+    font-size: 120px;
+  }
+  //   #my-form {
+  //     margin-top: 50px;
+  //     margin-bottom: 40px;
+  //   }
+  //   .nav {
+  //     h3 {
+  //       margin-bottom: 0.895vw;
+  //       font-size: 27px;
+  //     }
+  //     a {
+  //       font-size: 24px;
+  //     }
+  //   }
+  //   h4 {
+  //     font-size: 24px;
+  //   }
+}
