--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 
 @import 'stylesheets/index.scss';
 @import 'stylesheets/about.scss';
+@import 'stylesheets/lending.scss';
 
 @import 'stylesheets/articles.scss';
 @import 'stylesheets/article.scss';
