--- a/src/stylesheets/fonts.scss
+++ b/src/stylesheets/fonts.scss
@@ -1,9 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+//
+// // PP Pangram Sans Semibold
+// @font-face {
+//   font-family: 'PP Pangram Sans';
+//   src: url('fonts/PPPangramSans-Semibold.otf') format('opentype');
+//   font-weight: 600;
+//   font-style: normal;
+// }
 
-// PP Pangram Sans Semibold
+//PP Neue Machina
 @font-face {
-  font-family: 'PP Pangram Sans';
-  src: url('fonts/PPPangramSans-Semibold.otf') format('opentype');
-  font-weight: 600;
+  font-family: 'PP Neue Machina';
+  src: url('fonts/PPNeueMachina-InktrapUltrabold.otf') format('opentype');
+  font-weight: 800;
+  font-style: normal;
+}
+
+//PP Neue Montreal
+@font-face {
+  font-family: 'PP Neue Montreal';
+  src: url('fonts/PPNeueMontreal-Book.otf') format('opentype');
+  font-weight: 400;
   font-style: normal;
 }
