--- a/src/stylesheets/about.scss
+++ b/src/stylesheets/about.scss
@@ -1,7 +1,5 @@
 body.about {
-  margin: auto;
-  width: 77.976vw;
-  background: var(--white);
+  background: var(--pink);
   color: var(--black);
 
   a {
@@ -9,194 +7,592 @@ body.about {
     color: var(--black);
   }
 
-  h1 {
-    font-family: 'PP Pangram Sans';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 6.369vw;
-  }
-
-  h2 {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 5.06vw;
-  }
-
-  h3 {
-    // margin: auto;
-    font-family: 'PP Pangram Sans';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 2.143vw;
-  }
-
-  h4,
-  a {
-    margin-top: 6.786vw;
-    font-family: 'PP Pangram Sans';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 1.19vw;
-  }
-
-  p {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 1.488vw;
-  }
-
   .header {
     display: flex;
     flex-direction: row;
-    padding-top: 7.44vw;
-    h1 {
+    padding: 3.988vw 13.869vw 0;
+    a.about {
+      position: relative;
+      margin-top: 0.595vw;
       margin-right: auto;
+      font-size: 1.31vw;
+    }
+
+    .aboutpr {
+      margin-left: -120px;
+      width: 156px;
+      height: 30px;
+      font-family: 'PP Neue Machina';
+      font-style: normal;
+      font-weight: 800;
+      font-size: 29px;
+      line-height: 30px;
+      background-image: url('images/about/about.png');
+    }
+    .len {
+      margin-left: 30px;
+      width: 134px;
+      height: 30px;
+      font-family: 'PP Neue Machina';
+      font-style: normal;
+      font-weight: 800;
+      font-size: 29px;
+      line-height: 30px;
+    }
+    .styleg {
+      margin-left: 30px;
+      width: 171px;
+      height: 30px;
+      font-family: 'PP Neue Machina';
+      font-style: normal;
+      font-weight: 800;
+      font-size: 29px;
+      line-height: 30px;
     }
     .vk,
     .tg,
     .dzen {
-      margin-top: 2.143vw;
-      height: 2.976vw;
-      width: 2.976vw;
+      position: absolute;
+      height: 62px;
+      width: 62px;
       background-size: contain;
     }
+
     .vk {
       background-image: url('images/b_icon_vk.png');
+      margin-left: 990px;
     }
+
     .tg {
-      margin-left: 0.952vw;
       background-image: url('images/b_icon_tg.png');
+      margin-left: 1090px;
     }
+
     .dzen {
-      margin-left: 0.952vw;
       background-image: url('images/b_icon_dzen.png');
+      margin-left: 1190px;
     }
   }
-
-  .s1 {
-    display: flex;
-    justify-content: space-between;
-    width: auto;
-    height: 23.631vw;
-    margin-top: 14.881vw;
-
-    border-width: 2px 0px;
-    border-style: solid;
-    border-color: var(--black);
-
-    .s1_1 {
-      width: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      border-right: 2px solid var(--black);
-      img {
-        margin: 0;
-        width: 32.798vw;
-      }
+  .content {
+    h1 {
+      margin-top: 3vw;
+      margin-left: 30px;
+      font-family: 'PP Neue Machina';
+      color: white;
+      font-style: normal;
+      font-weight: 800;
+      line-height: 140px;
+      font-size: 163px;
     }
-
-    .s1_2 {
-      width: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    .glav {
+      position: absolute;
+      width: 811px;
+      height: 329.02px;
+      margin-left: 100px;
+      top: 247px;
+      background-image: url('images/BGH1.svg');
     }
-  }
-
-  .s2 {
-    display: flex;
-    justify-content: space-between;
-    width: auto;
-    height: 33.69vw;
-
-    .s2_1 {
-      width: 30%;
-      position: relative;
-      padding-top: 7.56vw;
+    .n1 {
+      position: absolute;
+      width: 220px;
+      height: 140px;
+      left: 15px;
+      top: 590px;
+      transform: rotate(-8.71deg);
+      background-image: url('images/about/hohloma.png');
+    }
+    .n2 {
+      position: absolute;
+      width: 270px;
+      height: 270px;
+      left: 230px;
+      top: 598px;
+      background-image: url('images/about/embro.png');
+    }
+    .n3 {
+      position: absolute;
+      width: 182px;
+      height: 150px;
+      left: 500px;
+      top: 680px;
+      transform: rotate(9.25deg);
+      background-image: url('images/about/fun.png');
+    }
+    .n4 {
+      position: absolute;
+      width: 117.37px;
+      height: 121.2px;
+      left: 1170px;
+      top: 737px;
+      background-image: url('images/about/rospis.png');
+    }
+    .n5 {
+      position: absolute;
+      width: 320px;
+      height: 455.57px;
+      left: 1250px;
+      top: 411px;
+      transform: rotate(6.99deg);
+      background-image: url('images/about/head.png');
+    }
+    .n6 {
+      position: absolute;
+      width: 50px;
+      height: 40px;
+      left: 1260px;
+      top: 700px;
+      transform: matrix(-0.96, -0.29, -0.29, 0.96, 0, 0);
+      background-image: url('images/about/rospis2.png');
+    }
+    .rec1 {
+      position: absolute;
+      width: 1680px;
+      height: 638px;
+      left: 0px;
+      top: 850px;
+      background: #3b7992;
+    }
+    .text p {
+      position: absolute;
+      width: 328px;
+      height: 24px;
+      left: 190px;
+      top: 880px;
+      font-family: 'PP Neue Montreal';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 23px;
+      line-height: 24px;
+      color: white;
+    }
+    .rec2 {
+      position: absolute;
+      width: 502px;
+      height: 77px;
+      left: 172px;
+      top: 1089px;
+      background: #000000;
+      border-radius: 15px;
+    }
+    .rec2 h2 {
+      position: absolute;
+      width: 470px;
+      height: 68px;
+      left: 20px;
+      top: 10px;
+      font-family: 'PP Neue Machina';
+      font-style: normal;
+      font-weight: 800;
+      font-size: 66px;
+      line-height: 68px;
+      color: #ffffff;
+    }
+    .point {
+      position: absolute;
+      width: 604px;
+      height: 170px;
+      left: 910px;
+      top: 1097px;
+      font-family: 'PP Neue Montreal';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 28px;
+      line-height: 34px;
+      color: #ffffff;
+    }
+    .n7 {
+      position: absolute;
+      width: 191px;
+      height: 191px;
+      left: 198px;
+      top: 1227px;
+      background-image: url('images/about/uzor1.png');
+    }
+    .rec3 {
+      position: absolute;
+      width: 1680px;
+      height: 716px;
+      left: 0px;
+      top: 1488px;
+      background: #037b57;
+    }
+    .n8 {
+      position: absolute;
+      width: 415px;
+      height: 120px;
+      left: 932.56px;
+      top: 1437.73px;
+      transform: rotate(6.22deg);
+      background-image: url('images/about/embro1.png');
+    }
+    .rec4 {
+      position: absolute;
+      width: 541px;
+      height: 76px;
+      left: 172px;
+      top: 1682px;
+      background: #000000;
+      border-radius: 15px;
+    }
+    .rec4 h2 {
+      position: absolute;
+      left: 20px;
+      width: 509px;
+      height: 136px;
+      font-family: 'PP Neue Machina';
+      font-style: normal;
+      font-weight: 800;
+      font-size: 66px;
+      line-height: 68px;
+      color: #ffffff;
+    }
+    .rec5 {
+      position: absolute;
+      width: 211px;
+      height: 77px;
+      left: 172px;
+      top: 1740px;
+      background: #000000;
+      border-radius: 15px;
+    }
+    .rec5 h2 {
+      position: absolute;
+      top: 5px;
+      left: 20px;
+      width: 509px;
+      height: 136px;
+      font-family: 'PP Neue Machina';
+      font-style: normal;
+      font-weight: 800;
+      font-size: 66px;
+      line-height: 68px;
+      color: #ffffff;
+    }
+    .idea {
+      position: absolute;
+      width: 604px;
+      height: 340px;
+      left: 910px;
+      top: 1682px;
+      font-family: 'PP Neue Montreal';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 28px;
+      line-height: 34px;
+      color: #ffffff;
+    }
+    .n9 {
+      position: absolute;
+      width: 270px;
+      height: 190px;
+      left: 66.14px;
+      top: 1918.27px;
+      transform: rotate(15.77deg);
+      background-image: url('images/about/hohloma1.png');
+    }
+    .rec6 {
+      position: absolute;
+      width: 1680px;
+      height: 752px;
+      left: 0px;
+      top: 2204px;
+      background: #ffcfda;
+    }
+    .rec7 {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 4px 16px;
+      gap: 10px;
+      position: absolute;
+      width: 410px;
+      height: 76px;
+      left: 172px;
+      top: 2398px;
+      background: #000000;
+      border-radius: 15px;
+    }
+    .rec7 h2 {
+      position: absolute;
+      left: 20px;
+      width: 509px;
+      height: 136px;
+      font-family: 'PP Neue Machina';
+      font-style: normal;
+      font-weight: 800;
+      font-size: 66px;
+      line-height: 68px;
+      color: #ffffff;
+    }
+    .aud {
+      position: absolute;
+      width: 646px;
+      height: 368px;
+      left: 868px;
+      top: 2398px;
+      font-family: 'PP Neue Montreal';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 28px;
+      line-height: 40px;
+      color: black;
+      list-style-type: disc;
+    }
+    .n11 {
+      position: absolute;
+      width: 170px;
+      height: 265.83px;
+      left: 150px;
+      top: 2529px;
+      transform: matrix(-1, 0.05, 0.05, 1, 0, 0);
+      background-image: url('images/about/mat.png');
+    }
+    .n12 {
+      position: absolute;
+      width: 140px;
+      height: 220px;
+      left: 400px;
+      top: 2570.13px;
+      transform: 90deg;
+      background-image: url('images/about/mat1.png');
+    }
+    .n13 {
+      position: absolute;
+      width: 83px;
+      height: 140px;
+      left: 630px;
+      top: 2545.32px;
+      transform: 90deg;
+      background-image: url('images/about/mat2.png');
+    }
+    .n14 {
+      position: absolute;
+      width: 60px;
+      height: 85px;
+      left: 1500px;
+      top: 2279.84px;
+      transform: 90deg;
+      background-image: url('images/about/mat3.png');
+    }
+    .n15 {
+      position: absolute;
+      width: 70px;
+      height: 110px;
+      left: 1400px;
+      top: 2751.98px;
+      transform: 90deg;
+      background-image: url('images/about/mat4.png');
+    }
+    .rec8 {
+      position: absolute;
+      width: 1680px;
+      height: 919px;
+      left: 0px;
+      top: 2956px;
+      background: #3b7992;
+    }
+    .rec9 {
+      position: absolute;
+      width: 805px;
+      height: 76px;
+      left: 172px;
+      top: 3151px;
+      background: #000000;
+      border-radius: 15px;
+    }
+    .rec9 h2 {
+      position: absolute;
+      top: 5px;
+      left: 10px;
+      width: 773px;
+      height: 68px;
+      font-family: 'PP Neue Machina';
+      font-style: normal;
+      font-weight: 800;
+      font-size: 66px;
+      line-height: 68px;
+      color: #ffffff;
+    }
+    .n16 {
+      position: absolute;
+      width: 160px;
+      height: 130px;
+      left: 90px;
+      top: 3304px;
+      transform: matrix(-0.96, -0.28, -0.28, 0.96, 0, 0);
+      background-image: url('images/about/gzhel.png');
+    }
+    .n17 {
+      position: absolute;
+      width: 200px;
+      height: 200px;
+      left: 73px;
+      top: 3592.03px;
+      transform: rotate(-11.16deg);
+      background-image: url('images/about/zvetok.png');
+    }
+    .n18 {
+      position: absolute;
+      width: 228.83px;
+      height: 218.96px;
+      left: 1335.21px;
+      top: 3073.14px;
+      background-image: url('images/about/hohloma2.png');
+    }
+    .n19 {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      left: 1400px;
+      top: 3653px;
+      transform: rotate(6.51deg);
+      background-image: url('images/about/embro2.png');
+    }
+    .oval1 {
+      position: absolute;
+      width: 216px;
+      height: 88px;
+      left: 390px;
+      top: 3344px;
+      background: #ffffff;
+      border-radius: 45px;
+    }
+    .oval1 p {
+      position: absolute;
+      width: 162px;
+      height: 68px;
+      left: 30px;
+      top: 10px;
+      font-family: 'PP Neue Montreal';
+      font-style: normal;
+      font-weight: 500;
+      font-size: 28px;
+      line-height: 34px;
       text-align: center;
-      border-right: 2px solid var(--black);
+      color: #000000;
     }
-
-    .s2_2 {
-      display: flex;
-      h1,
-      h2,
-      p {
-        text-align: center;
-      }
-
-      background-image: url('images/about/about.jpg');
-      background-size: 100%;
-
-      .per1,
-      .per2,
-      .per3 {
-        // width: max-content;
-      }
-
-      .per1,
-      .per2 {
-        margin-top: 4.464vw;
-      }
-
-      .per1 {
-        // margin-left: 8.929vw;
-      }
-
-      .per3 {
-        margin-top: 17.917vw;
-      }
+    .oval2 {
+      position: absolute;
+      width: 392px;
+      height: 88px;
+      left: 995px;
+      top: 3344px;
+      background: #ffffff;
+      border-radius: 45px;
+    }
+    .oval2 p {
+      position: absolute;
+      width: 338px;
+      height: 68px;
+      left: 30px;
+      top: 10px;
+      font-family: 'PP Neue Montreal';
+      font-style: normal;
+      font-weight: 500;
+      font-size: 28px;
+      line-height: 34px;
+      text-align: center;
+      color: #000000;
+    }
+    .oval3 {
+      position: absolute;
+      width: 310px;
+      height: 54px;
+      left: 685px;
+      top: 3478px;
+      background: #ffffff;
+      border-radius: 30px;
+    }
+    .oval3 p {
+      position: absolute;
+      top: 10px;
+      left: 30px;
+      width: 244px;
+      height: 34px;
+      font-family: 'PP Neue Montreal';
+      font-style: normal;
+      font-weight: 500;
+      font-size: 28px;
+      line-height: 34px;
+      text-align: center;
+    }
+    .oval4 {
+      position: absolute;
+      width: 328px;
+      height: 88px;
+      left: 390px;
+      top: 3582px;
+      background: #ffffff;
+      border-radius: 45px;
+    }
+    .oval4 p {
+      position: absolute;
+      width: 270px;
+      height: 68px;
+      left: 30px;
+      top: 10px;
+      font-family: 'PP Neue Montreal';
+      font-style: normal;
+      font-weight: 500;
+      font-size: 28px;
+      line-height: 34px;
+      text-align: center;
+      color: #000000;
+    }
+    .oval5 {
+      position: absolute;
+      width: 198px;
+      height: 88px;
+      left: 1080px;
+      top: 3582px;
+      background: #ffffff;
+      border-radius: 45px;
+    }
+    .oval5 p {
+      position: absolute;
+      width: 142px;
+      height: 68px;
+      left: 30px;
+      top: 10px;
+      font-family: 'PP Neue Montreal';
+      font-style: normal;
+      font-weight: 500;
+      font-size: 28px;
+      line-height: 34px;
+      text-align: center;
+      color: #000000;
     }
   }
-
-  .s3 {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    width: auto;
-    height: 29.7vw;
-
-    border-width: 2px 0px;
-    border-style: solid;
-    border-color: var(--black);
-
-    h3 {
-      margin-bottom: 2vw;
-    }
-    p {
-      margin-top: 1.25vw;
-      line-height: 1.8vw;
-    }
-  }
-
-  // .s4 {
-  //   display: flex;
-  //   justify-content: space-between;
-  //   width: auto;
-  //   height: 29.7vw;
-  // }
 
   .footer {
-    display: flex;
-    flex-direction: row;
-    width: auto;
-    // height: 13.571vw;
+    position: absolute;
+    width: 1680px;
+    height: 198px;
+    left: 0px;
+    top: 3875px;
+    background: #037b57;
 
-    a {
-      margin-right: auto;
+    h4 {
+      margin-top: 100px;
+      margin-left: 40px;
+      width: 200px;
+      height: 40px;
+      font-family: 'PP Neue Montreal';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 26px;
+      color: #ffffff;
     }
-
-    h4,
-    a {
-      margin-top: 9.7vw;
-      margin-bottom: 2.857vw;
+    h5 {
+      margin-top: -35px;
+      margin-left: 1480px;
+      width: 200px;
+      height: 40px;
+      font-family: 'PP Neue Montreal';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 26px;
+      color: #ffffff;
     }
-
-    // border-top: 2px solid var(--black);
   }
 }
