--- a/src/stylesheets/fonts.scss
+++ b/src/stylesheets/fonts.scss
@@ -1,17 +1,14 @@
-// @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-//
-// // PP Pangram Sans Semibold
-// @font-face {
-//   font-family: 'PP Pangram Sans';
-//   src: url('fonts/PPPangramSans-Semibold.otf') format('opentype');
-//   font-weight: 600;
-//   font-style: normal;
-// }
-
 //PP Neue Machina
 @font-face {
   font-family: 'PP Neue Machina';
   src: url('fonts/PPNeueMachina-InktrapUltrabold.otf') format('opentype');
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PP Neue Machina Plain';
+  src: url('fonts/PPNeueMachina-PlainUltrabold.otf') format('opentype');
   font-weight: 800;
   font-style: normal;
 }
@@ -22,4 +19,18 @@
   src: url('fonts/PPNeueMontreal-Book.otf') format('opentype');
   font-weight: 400;
   font-style: normal;
+}
+
+@font-face {
+  font-family: 'PP Neue Montreal';
+  src: url('fonts/PPNeueMontreal-Medium.otf') format('opentype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PP Neue Montreal';
+  src: url('fonts/PPNeueMontreal-Italic.otf') format('opentype');
+  font-weight: 400;
+  font-style: italic;
 }
