--- a/src/stylesheets/about.scss
+++ b/src/stylesheets/about.scss
@@ -90,7 +90,7 @@ body.about {
       height: 329.02px;
       margin-left: 100px;
       top: 247px;
-      background-image: url('images/BGH1.svg');
+      background-image: url('images/preview-lending/BGH1.svg');
     }
     .n1 {
       position: absolute;
