--- a/src/stylesheets/lending.scss
+++ b/src/stylesheets/lending.scss
@@ -37,7 +37,7 @@ body.lending {
       font-weight: 800;
       font-size: 29px;
       line-height: 30px;
-      background-image: url('images/lending.png');
+      background-image: url('images/preview-lending/lending.png');
     }
     .styleg {
       margin-left: 30px;
@@ -90,7 +90,7 @@ body.lending {
       height: 329.02px;
       margin-left: 100px;
       top: 247px;
-      background-image: url('images/BGH1.svg');
+      background-image: url('images/preview-lending/BGH1.svg');
     }
     .n1 {
       position: absolute;
@@ -99,7 +99,7 @@ body.lending {
       left: 62px;
       top: 580px;
       transform: rotate(-11.6deg);
-      background-image: url('images/zvetok.png');
+      background-image: url('images/preview-lending/zvetok.png');
     }
     .n2 {
       position: absolute;
@@ -108,7 +108,7 @@ body.lending {
       left: 160px;
       top: 650px;
       transform: rotate(-30deg);
-      background-image: url('images/kruzheva1.png');
+      background-image: url('images/preview-lending/kruzheva1.png');
     }
     .n3 {
       position: absolute;
@@ -117,7 +117,7 @@ body.lending {
       left: 500px;
       top: 620px;
       transform: rotate(5deg);
-      background-image: url('images/gzhel.png');
+      background-image: url('images/preview-lending/gzhel.png');
     }
     .n4 {
       position: absolute;
@@ -125,7 +125,7 @@ body.lending {
       height: 165px;
       left: 1080px;
       top: 711px;
-      background-image: url('images/hohloma2.png');
+      background-image: url('images/preview-lending/hohloma2.png');
     }
     .n5 {
       position: absolute;
@@ -134,7 +134,7 @@ body.lending {
       left: 1200px;
       top: 330px;
       transform: rotate(2.52deg);
-      background-image: url('images/kukla2.png');
+      background-image: url('images/preview-lending/kukla2.png');
     }
     .rec1 {
       width: 1660px;
@@ -197,7 +197,7 @@ body.lending {
       height: 201px;
       left: 132px;
       top: 1226px;
-      background-image: url('images/embro.png');
+      background-image: url('images/preview-lending/embro.png');
     }
     .n7 {
       position: absolute;
@@ -206,7 +206,7 @@ body.lending {
       left: 620px;
       top: 1400px;
       transform: matrix(1, -0.08, -0.08, 1, 0, 0);
-      background-image: url('images/carving.png');
+      background-image: url('images/preview-lending/carving.png');
     }
     .rec3 {
       position: absolute;
@@ -259,7 +259,7 @@ body.lending {
       left: 66.14px;
       top: 2000px;
       transform: rotate(10deg);
-      background-image: url('images/hohloma1.png');
+      background-image: url('images/preview-lending/hohloma1.png');
     }
     .n9 {
       position: absolute;
@@ -267,7 +267,7 @@ body.lending {
       height: 190px;
       left: 352px;
       top: 1894px;
-      background-image: url('images/kruzheva2.png');
+      background-image: url('images/preview-lending/kruzheva2.png');
     }
     .rec5 {
       position: absolute;
@@ -306,7 +306,7 @@ body.lending {
       left: 1230px;
       top: 2270px;
       transform: rotate(5.13deg);
-      background-image: url('images/head2.png');
+      background-image: url('images/preview-lending/head2.png');
     }
     .n11 {
       position: absolute;
@@ -315,7 +315,7 @@ body.lending {
       left: 20px;
       top: 2543px;
       transform: matrix(0.99, 0.12, 0.12, 0.99, 0, 0);
-      background-image: url('images/head3.png');
+      background-image: url('images/preview-lending/head3.png');
     }
     .n12 {
       position: absolute;
@@ -324,7 +324,7 @@ body.lending {
       left: 1300px;
       top: 2720px;
       transform: rotate(1.63deg);
-      background-image: url('images/head1.png');
+      background-image: url('images/preview-lending/head1.png');
     }
     .speak {
       position: absolute;
@@ -332,7 +332,7 @@ body.lending {
       height: 312.79px;
       left: 380px;
       top: 2626px;
-      background-image: url('images/speak.png');
+      background-image: url('images/preview-lending/speak.png');
     }
     .speak p {
       position: absolute;
