--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 @import 'stylesheets/index.scss';
 @import 'stylesheets/about.scss';
 @import 'stylesheets/lending.scss';
+@import 'stylesheets/preview.scss';
 @import 'stylesheets/styleguide.scss';
 
 @import 'stylesheets/articles.scss';
@@ -18,3 +19,11 @@
 @import 'stylesheets/craft.scss';
 
 @import 'stylesheets/map.scss';
+
+@import 'stylesheets/components/atoms.scss';
+@import 'stylesheets/components/collections.scss';
+@import 'stylesheets/components/molecules.scss';
+@import 'stylesheets/components/organisms.scss';
+@import 'stylesheets/components/quarks.scss';
+@import 'stylesheets/components/superorganisms.scss';
+@import 'stylesheets/components/wrappers.scss';
