--- a/src/stylesheets/articles.scss
+++ b/src/stylesheets/articles.scss
@@ -1,12 +1,12 @@
 // Стили для страницы (одной) со всеми подборками и мини-статьями
-body.articles {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  & > div,
-  & > a {
-    margin: 10px 0;
-  }
-}
+// body.articles {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//
+//   & > div,
+//   & > a {
+//     margin: 10px 0;
+//   }
+// }
