--- a/src/stylesheets/fonts.scss
+++ b/src/stylesheets/fonts.scss
@@ -13,6 +13,13 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'PP Neue Machina Plain Regular';
+  src: url('fonts/PPNeueMachina-PlainRegular.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+}
+
 //PP Neue Montreal
 @font-face {
   font-family: 'PP Neue Montreal';
