--- a/src/stylesheets/components/atoms.scss
+++ b/src/stylesheets/components/atoms.scss
@@ -38,6 +38,18 @@ a {
   width: 40px;
   height: 40px;
   background-repeat: no-repeat;
+
+  .VK {
+    background-image: url('images/IconsSocialNetworks/Q_VK-White.png');
+  }
+
+  .TG {
+    background-image: url('images/IconsSocialNetworks/Q_TG-White.png');
+  }
+
+  .Dzen {
+    background-image: url('images/IconsSocialNetworks/Q_Dzen-White.png');
+  }
 }
 
 .A_SectionTitles {
