--- a/src/stylesheets/fonts.scss
+++ b/src/stylesheets/fonts.scss
@@ -20,12 +20,33 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'PP Neue Machina Plain Light';
+  src: url('fonts/PPNeueMachina-PlainLight.otf') format('opentype');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PP Neue Machina Plain Ultrabold Italic';
+  src: url('fonts/PPNeueMachina-PlainUltraboldItalic.otf') format('opentype');
+  font-weight: 800;
+  font-style: italic;
+}
+
 //PP Neue Montreal
 @font-face {
   font-family: 'PP Neue Montreal';
   src: url('fonts/PPNeueMontreal-Book.otf') format('opentype');
   font-weight: 400;
   font-style: normal;
+}
+
+@font-face {
+  font-family: 'PP Neue Montreal';
+  src: url('fonts/PPNeueMontreal-Italic.otf') format('opentype');
+  font-weight: 400;
+  font-style: italic;
 }
 
 @font-face {
@@ -37,7 +58,7 @@
 
 @font-face {
   font-family: 'PP Neue Montreal';
-  src: url('fonts/PPNeueMontreal-Italic.otf') format('opentype');
-  font-weight: 400;
-  font-style: italic;
+  src: url('fonts/PPNeueMontreal-Bold.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
 }
