шрифты и подчёркивание текста

--- a/src/stylesheets/fonts.scss
+++ b/src/stylesheets/fonts.scss
@@ -62,3 +62,10 @@
   font-weight: 700;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'PP Neue Montreal';
+  src: url('fonts/PPNeueMontreal-Thin.otf') format('opentype');
+  font-weight: 100;
+  font-style: normal;
+}
