--- a/src/stylesheets/components/molecules.scss
+++ b/src/stylesheets/components/molecules.scss
@@ -67,6 +67,11 @@
   grid-row-gap: 18px;
 }
 
+//
+//
+//
+// Страницы ремёсел
+
 .M_CraftsCard {
   display: flex;
   flex-direction: column;
@@ -108,7 +113,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 90px 0px 0px;
+  margin-top: 90px;
   gap: 20px;
 }
 
@@ -118,11 +123,11 @@
   align-items: flex-start;
 
   &.-Left100 {
-    padding: 0px 0px 0px 100px;
+    margin-left: 100px;
   }
 
   &.-Left200 {
-    padding: 0px 0px 0px 200px;
+    margin-left: 200px;
   }
 }
 
@@ -137,7 +142,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0px;
   gap: 16px;
 
   .C_IconsSliderPoint {
@@ -160,7 +164,7 @@
 .M_CraftBodyList {
   display: flex;
   flex-direction: column;
-  padding: 0px 0px 0px 100px;
+  margin-left: 100px;
 }
 
 .M_TeaserCard {
