--- a/src/stylesheets/components/organisms.scss
+++ b/src/stylesheets/components/organisms.scss
@@ -117,7 +117,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding: 0px 0px 0px 52px;
+    margin-left: 52px;
     gap: 72px;
   }
 }
